//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version:
Date:
----------------------------------------------------------------------------------------------------------------------
Version: 2.11.1
Date: April 5th 2025
    Fixes:
        - (regression) Fix opening new unnamed files.
        - (.NET 9) Fix page name display in the search-all dropdown.
        - When calculating the required inserters, remember that inserters cannot hold more than one stack.
    Internal changes:
        - Quality objects now have reference equality and abstract serialization, like FactorioObjects.
----------------------------------------------------------------------------------------------------------------------
Version: 2.11.0
Date: March 21st 2025
    Features:
        - Open the preferences or milestones when you click on the icon for the reactor or quality warning messages.
        - Implemented Auto Save.
        - (SA) Research recipes correctly consume quality science packs, and the UI explains this.
        - Added marker to recipes already used on the current page.
    Fixes:
        - Fix export of blueprint chests from shopping list (broken in factorio >= 2.0.35)
        - (regression) The total sushi-input/-output items display belt counts again, and allow them as input.
        - (regression) Spent fuel amounts could be displayed with wrong value.
----------------------------------------------------------------------------------------------------------------------
Version: 2.10.0
Date: March 5th 2025
    Features:
        - (SA) Calculate the required heating and show it in tooltips and the shopping list.
        - Update Yafc to support Factorio 2.0.38