@@ -17,6 +17,8 @@
 ----------------------------------------------------------------------------------------------------------------------
 Version:
 Date:
+    Fixes:
+        - Prevent productivity bonuses from exceeding +300%, unless otherwise allowed by mods.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.11.1
 Date: April 5th 2025
